FLOW-74, 포스트 검색 기능 아직 구현 미완성,