@@ -1,12 +1,13 @@
 package com.flow.main.service.posts;
 
+import com.flow.main.dto.controller.post.keyword.FindByKeywordDto;
 import com.flow.main.dto.controller.post.keyword.response.FindByKeywordResponseDto;
 import com.flow.main.dto.jpa.posts.PostsDto;
 import com.flow.main.mapper.PostsMapper;
 import com.flow.main.service.posts.persistence.PostsService;
-import java.util.HashSet;
+import java.util.ArrayList;
+import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
@@ -15,7 +16,7 @@ import org.springframework.stereotype.Service;
 
 @Service
 @RequiredArgsConstructor
-public class PostsGetByKeywordService {
+public class PostsFindByKeywordService {
 
     private final PostsService postsService;
     private final PostsMapper postsMapper;
@@ -23,12 +24,16 @@ public class PostsGetByKeywordService {
     public FindByKeywordResponseDto findPostsByKeyword(String keyword, Long page, Long count){
 
         Pageable pageable = PageRequest.of(page.intValue() - 1, count.intValue());
-        List<PostsDto> postsDtosWithDuplicates = postsService.findPostsByKeyword(keyword, pageable);
-        List<PostsDto> postsDtosWithoutDuplicates = postsDtosWithDuplicates.stream()
-            .distinct()  // 중복을 제거하는 distinct() 메서드 사용
-            .toList();
+        List<PostsDto> postsDtos = postsService.findPostsByKeyword(keyword, pageable);
+        List<FindByKeywordDto> findByKeywordDtoList = postsMapper.toFindByKeywordDtoList(postsDtos);
+//        findByKeywordDtoList = new ArrayList<>(new LinkedHashSet<>(findByKeywordDtoList));
+
+        List<FindByKeywordDto> listWithoutDuplicates = findByKeywordDtoList.stream()
+            .distinct()
+            .collect(Collectors.toList());
+
         return FindByKeywordResponseDto.builder()
-            .findByKeywordDtoList(postsMapper.toFindByKeywordDtoList(postsDtosWithoutDuplicates))
+            .findByKeywordDtoList(listWithoutDuplicates)
             .build();
     }
 
